[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = ["setuptools.backends.legacy:build"]

[project]
name = "customer-support-triage"
version = "1.0.0"
description = "OpenEnv environment for customer support ticket triage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "pydantic==2.10.3",
    "openai==1.57.2",
    "pyyaml==6.0.2",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
server = "server.app:main"
